2004-07-28  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/AE/Component.py (ComponentStackFrame.__del__):
	removing the __del__ method, as Python now can take care of circular
	references without help.

2004-07-25  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/DT/DTLexer.py: pcre has finally been removed from Python
	in 2.4a1; I rewrote this to use the re module.  

2004-05-26  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/psyco_accel.py: simplest possible service that
	invokes psyco.  Will probably be jazzed up a bit.

2004-05-12  Drew Csillag  <drew_csillag@yahoo.com>

	* SkunkWeb/util/precompile.py.in: now compiles message catalogs too

2004-04-09  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/DT/DTLexer.py (findTags): now allows files to end
	in "<".

2004-04-05  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Cache.py: when checking for change of a file, now return
	the max of ctime and mtime, to support smbfs shares where the ctime
	isn't updated correctly.

2004-03-18  Drew Csillag  <drew@loki.sai.local>

	* pylibs/SocketMan/SocketMan.py (SocketMan.retrying_bind): added
	retrying_bind so can call with either UNIX or TCP socket for the
	retry stuff

2004-03-17  Drew Csillag  <drew@loki.sai.local>

	* SkunkWeb/util/precompile.py.in: now when creating shadow
	directories, it will copy non-compilable things, and copy symlinks
	(not what they point to) to the shadow directory.

2004-03-15  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/SocketMan/SocketMan.py (SocketMan.addConnection): now
	break out of the retry loop if the socket bind succeeds.

2004-03-15  Drew Csillag <drew@loki.sai.local>

	* pylibs/SocketMan/SocketMan.py (SocketMan.addConnection): now
	retries a few times on bind in case the original isn't quite dead
	yet.

	* SkunkWeb/SkunkWeb/LogObj.py (redirectStdOutErr): now checks to
	see if stderr/stdout already redirected before redirecting again
	